bon fonctionnement du jeu, reste a gerer le end

--- a/www/src/View/setup.html
+++ b/www/src/View/setup.html
@@ -30,10 +30,10 @@
                             <p>Porte-avion (5 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="porte-avion-debut-j1">
+                            <input placeholder="Début" type="text" class="validate" name="porte-avion-debut-j1" value="A8">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="porte-avion-fin-j1">
+                            <input placeholder="Fin" type="text" class="validate" name="porte-avion-fin-j1" value="E8">
                         </div>
                     </div>
                     <div class="row">
@@ -41,10 +41,10 @@
                             <p>Croiseur (4 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="croiseur-debut-j1">
+                            <input placeholder="Début" type="text" class="validate" name="croiseur-debut-j1" value="C2">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="croiseur-fin-j1">
+                            <input placeholder="Fin" type="text" class="validate" name="croiseur-fin-j1" value="C5">
                         </div>
                     </div>
                     <div class="row">
@@ -52,10 +52,10 @@
                             <p>Contre-torpilleurs (3 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="contre-torpilleurs-debut-j1">
+                            <input placeholder="Début" type="text" class="validate" name="contre-torpilleurs-debut-j1" value="H3">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="contre-torpilleurs-fin-j1">
+                            <input placeholder="Fin" type="text" class="validate" name="contre-torpilleurs-fin-j1" value="J3">
                         </div>
                     </div>
                     <div class="row">
@@ -63,10 +63,10 @@
                             <p>Sous-marin (3 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="sous-marin-debut-j1">
+                            <input placeholder="Début" type="text" class="validate" name="sous-marin-debut-j1" value="J5">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="sous-marin-fin-j1">
+                            <input placeholder="Fin" type="text" class="validate" name="sous-marin-fin-j1" value="J7">
                         </div>
                     </div>
                     <div class="row">
@@ -74,10 +74,10 @@
                             <p>Torpilleur (2 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="torpilleur-debut-j1">
+                            <input placeholder="Début" type="text" class="validate" name="torpilleur-debut-j1" value="I10">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="torpilleur-fin-j1">
+                            <input placeholder="Fin" type="text" class="validate" name="torpilleur-fin-j1" value="J10">
                         </div>
                     </div>
                     <div class="row">
@@ -90,10 +90,10 @@
                             <p>Porte-avion (5 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="porte-avion-debut-j2">
+                            <input placeholder="Début" type="text" class="validate" name="porte-avion-debut-j2" value="A1">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="porte-avion-fin-j2">
+                            <input placeholder="Fin" type="text" class="validate" name="porte-avion-fin-j2" value="E1">
                         </div>
                     </div>
                     <div class="row">
@@ -101,10 +101,10 @@
                             <p>Croiseur (4 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="croiseur-debut-j2">
+                            <input placeholder="Début" type="text" class="validate" name="croiseur-debut-j2" value="A3">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="croiseur-fin-j2">
+                            <input placeholder="Fin" type="text" class="validate" name="croiseur-fin-j2" value="A6">
                         </div>
                     </div>
                     <div class="row">
@@ -112,10 +112,10 @@
                             <p>Contre-torpilleurs (3 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="contre-torpilleurs-debut-j2">
+                            <input placeholder="Début" type="text" class="validate" name="contre-torpilleurs-debut-j2" value="A7">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="contre-torpilleurs-fin-j2">
+                            <input placeholder="Fin" type="text" class="validate" name="contre-torpilleurs-fin-j2" value="C7">
                         </div>
                     </div>
                     <div class="row">
@@ -123,10 +123,10 @@
                             <p>Sous-marin (3 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="sous-marin-debut-j2">
+                            <input placeholder="Début" type="text" class="validate" name="sous-marin-debut-j2" value="H7">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="sous-marin-fin-j2">
+                            <input placeholder="Fin" type="text" class="validate" name="sous-marin-fin-j2" value="J7">
                         </div>
                     </div>
                     <div class="row">
@@ -134,10 +134,10 @@
                             <p>Torpilleur (2 cases)</p>
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Début" type="text" class="validate" name="torpilleur-debut-j2">
+                            <input placeholder="Début" type="text" class="validate" name="torpilleur-debut-j2" value="F9">
                         </div>
                         <div class="input-field col s3">
-                            <input placeholder="Fin" type="text" class="validate" name="torpilleur-fin-j2">
+                            <input placeholder="Fin" type="text" class="validate" name="torpilleur-fin-j2" value="F10">
                         </div>
                     </div>
                     <div class="row">
